# chatbet-base-models

./: CLAUDE.md  README.md  pyproject.toml
.github/: BRANCH_PROTECTION.md  CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml
chatbet_base_models/: __init__.py  message_template.py  platform_endpoints.py  promotion_config.py  site_config_model.py  sportbook_config.py  tutorial.py
tests/: test_message_template.py  test_platform_endpoints.py  test_promotion_config.py  test_site_config_model.py  test_sportbook_config.py  test_tutorial.py
