[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatbet-base-models"
version = "1.0.0"
description = "Modelos base de Pydantic para aplicaciones ChatBet"
authors = [{name = "ChatBet Team", email = "tech@chatbet.gg"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.0.0,<3.0.0",
]

[project.urls]
Homepage = "https://github.com/chatbet/chatbet-base-models"
Repository = "https://github.com/chatbet/chatbet-base-models.git"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black",
    "isort",
    "mypy",
]

[tool.setuptools.packages.find]
include = ["base_models*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88